--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,13 @@
     </parent>
     <groupId>uz.ssd</groupId>
     <artifactId>location-sender</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>location-sender</name>
     <description>Location Sender</description>
 
     <properties>
         <java.version>1.8</java.version>
+        <maven.test.skip>true</maven.test.skip>
     </properties>
 
     <dependencies>
